--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -1,17 +1,26 @@
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "ESPHome Remote Fallback"
-    password: !secret wifi_fallback_password
-
-# Enable logging
 logger:
 
+api:
+  services:
+    - service: goto_screen
+      variables:
+        screen_name: string
+      then:
+      - lambda: |-
+          goToScreenFromString(screen_name);
+
 ota:
+
+wifi:
+  ssid: ${wifi_ssid}
+  password: ${wifi_password}
+  fast_connect: true
+
+  ap:
+    ssid: "${friendly_name} Fallback Hotspot"
+    password: ${wifi_fallback_password}
+
+captive_portal:
 
 color:
   - id: my_red
@@ -212,17 +221,8 @@ deep_sleep:
 
 binary_sensor:
   - platform: status
-    name: ${boot_name}Node Status"
+    name: "${boot_name} Node Status"
     id: system_status
-
-api:
-  services:
-    - service: goto_screen
-      variables:
-        screen_name: string
-      then:
-      - lambda: |-
-          goToScreenFromString(screen_name);
 
 time:
   - platform: homeassistant
