--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -17,7 +17,10 @@ esphome:
 
 substitutions:
   boot_name: '"Fire Remote <3"'
-  friendly_name: "Fire Remote"
+  friendly_name: "M5Fire Remote"
+  wifi_ssid: !secret wifi_ssid
+  wifi_password: !secret wifi_password
+  wifi_fallback_password: !secret wifi_fallback_password
   large_font_size: "24"
   medium_font_size: "20"
   small_font_size: "18"
@@ -31,7 +34,7 @@ substitutions:
   draw_volume_level: "false"
   draw_shuffle_disabled: "false"
 
-<<: !include sharedRemoteConfig.yaml
+<<: !include esphomeRemote/sharedRemoteConfig.yaml
 
 external_components:
   - source:
