--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -16,6 +16,9 @@ esphome:
 substitutions:
   boot_name: '"TDisplay Remote <3"'
   friendly_name: "TDisplay Remote"
+  wifi_ssid: !secret wifi_ssid
+  wifi_password: !secret wifi_password
+  wifi_fallback_password: !secret wifi_fallback_password
   large_font_size: "24"
   medium_font_size: "15"
   small_font_size: "14"
@@ -29,7 +32,7 @@ substitutions:
   draw_volume_level: "false"
   draw_shuffle_disabled: "false"
 
-<<: !include sharedRemoteConfig.yaml
+<<: !include esphomeRemote/sharedRemoteConfig.yaml
   
 sensor:
 ## Rotary
