--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -20,6 +20,9 @@ esp32:
 substitutions:
   boot_name: '"Kitchen Remote <3"'
   friendly_name: "Kitchen Remote"
+  wifi_ssid: !secret wifi_ssid
+  wifi_password: !secret wifi_password
+  wifi_fallback_password: !secret wifi_fallback_password
   large_font_size: "24"
   medium_font_size: "20"
   small_font_size: "18"
@@ -33,7 +36,7 @@ substitutions:
   draw_volume_level: "false"
   draw_shuffle_disabled: "false"
 
-<<: !include sharedRemoteConfig.yaml
+<<: !include esphomeRemote/sharedRemoteConfig.yaml
 
 sensor:
   - platform: template
