--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -74,7 +74,32 @@ font:
     id: small_font
     size: ${small_font_size}
     glyphs: '*/\$#<>!"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏṣṢ'''
-
+  - file: 'fonts/materialdesignicons-webfont.ttf' 
+    id: material_font
+    size: ${large_font_size}
+    glyphs: [
+      '󰐊', # mdi-play
+      '󰓛', # mdi-stop
+      '󰏤', # home-pause
+      '󰽥', # mdi-moon-waning-crescent
+      '󰒝', # mdi-shuffle
+      '󰒞', # mdi-shuffle-disabled
+      '󰕾', # mdi-volume-high
+      '󰕿', # mdi-volume-low
+    ]  
+  - file: 'fonts/materialdesignicons-webfont.ttf' 
+    id: material_font_small
+    size: ${medium_font_size}
+    glyphs: [
+      '󰐊', # mdi-play
+      '󰓛', # mdi-stop
+      '󰏤', # home-pause
+      '󰽥', # mdi-moon-waning-crescent
+      '󰒝', # mdi-shuffle
+      '󰒞', # mdi-shuffle-disabled
+      '󰕾', # mdi-volume-high
+      '󰕿', # mdi-volume-low
+    ]
 image:
 ## You need 2 icons for each, one with a color background, one with black
 ## todo would be make these material icons or svg
