--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -37,6 +37,7 @@ substitutions:
   draw_battery_level: "true"
   draw_volume_level: "false"
   draw_shuffle_disabled: "false"
+  draw_header_time: "false"
   color_accent_primary_red: 63%
   color_accent_primary_green: 13%
   color_accent_primary_blue: 94%
