--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -1,4 +1,5 @@
 logger:
+  level: INFO
 
 api:
   services:
@@ -17,7 +18,7 @@ wifi:
   fast_connect: true
 
   ap:
-    ssid: "${friendly_name} Fallback Hotspot"
+    ssid: "${friendly_name} Fallback"
     password: ${wifi_fallback_password}
 
 captive_portal:
