--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -39,6 +39,7 @@ substitutions:
   color_accent_primary_blue: 68%
   display_timeout: "16"
   sleep_after: "7200"
+  menu_rollover_on: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
   
