--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -41,6 +41,7 @@ substitutions:
   color_accent_primary_blue: 20%
   display_timeout: "16"
   sleep_after: "7200"
+  menu_rollover_on: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
