--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -43,6 +43,7 @@ substitutions:
   color_accent_primary_blue: 94%
   display_timeout: "16"
   sleep_after: "7200"
+  menu_rollover_on: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
