load spotify playlists from spotcast sensor use ArduinoJSON for decoding sensors with json add TV to soundbar sources fix soundbar not showing up in media players menu if it was playing tv move friendlyNameEntity to a new file and use it more

--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -3,6 +3,7 @@ esphome:
   includes:
     - esphomeRemote/MenuGlobals.h
     - esphomeRemote/MenuTitle.h
+    - esphomeRemote/FriendlyNameEntity.h
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
