--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -6,6 +6,7 @@ esphome:
     - esphomeRemote/MenuGlobals.h
     - esphomeRemote/MenuTitle.h
     - esphomeRemote/FriendlyNameEntity.h
+    - esphomeRemote/TextHelpers.h
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
