--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -4,6 +4,7 @@ esphome:
     - esphomeRemote/MenuGlobals.h
     - esphomeRemote/MenuTitle.h
     - esphomeRemote/FriendlyNameEntity.h
+    - esphomeRemote/TextHelpers.h
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
