--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -43,6 +43,10 @@ substitutions:
   sleep_after: "7200"
   menu_rollover_on: "false"
   sync_active_player: "true"
+  dec_brightness_step: "10"
+  inc_brightness_step: "10"
+  dec_color_temperature_step: "10"
+  inc_color_temperature_step: "10"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
   
