--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -47,6 +47,7 @@ substitutions:
   sleep_after: "7200"
   menu_rollover_on: "false"
   sync_active_player: "true"
+  dark_mode: "true"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
