--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -47,6 +47,7 @@ substitutions:
   sleep_after: "7200"
   menu_rollover_on: "false"
   sync_active_player: "true"
+  dark_mode: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
