--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -23,6 +23,7 @@ substitutions:
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
+  display_size_x: "240"
   large_font_size: "24"
   medium_font_size: "20"
   small_font_size: "18"
@@ -30,6 +31,7 @@ substitutions:
   icon_size_large: "28"
   header_height: "24"
   margin_size: "8"
+  slider_margin_size: "6"
   scroll_bar_width: "8"
   bottom_bar_margin: "42"
   now_playing_max_lines: "5"
