--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -25,6 +25,7 @@ substitutions:
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
+  display_size_x: "240"
   large_font_size: "20"
   medium_font_size: "14"
   small_font_size: "12"
@@ -32,6 +33,7 @@ substitutions:
   icon_size_large: "19"
   header_height: "16"
   margin_size: "4"
+  slider_margin_size: "6"
   scroll_bar_width: "6"
   bottom_bar_margin: "32"
   now_playing_max_lines: "8"
