--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -21,6 +21,7 @@ substitutions:
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
+  display_size_x: "240"
   large_font_size: "24"
   medium_font_size: "15"
   small_font_size: "14"
@@ -28,6 +29,7 @@ substitutions:
   icon_size_large: "19"
   header_height: "16"
   margin_size: "4"
+  slider_margin_size: "6"
   scroll_bar_width: "6"
   bottom_bar_margin: "1"
   now_playing_max_lines: "5"
