--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,6 +19,9 @@ jobs:
         devices: [ 'tdisplayremote', 'fireremote', 'tdisplayt4', 'm5stickc' ]
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+      - run: pip install cpplint
+      - run: cpplint esphomeRemote/*
       - name: Create file
         run: |
           echo "d2lmaV9ic3NpZDogIjFDOjg3OjJDOjcwOkMyOkMyIgp3aWZpX3NzaWQ6ICJzc2lkIgp3aWZpX3Bhc3N3b3JkOiAid2lmaXBhc3MiCndpZmlfZmFsbGJhY2tfcGFzc3dvcmQ6ICJ3aWZpZmFsbGJhY2twYXNzIgphcGlfZW5jcnlwdGlvbjogImFwaWVuY3J5cHRpb24iCm90YV9lbmNyeXB0aW9uOiAib3RhZW5jcnlwdGlvbiIK" | base64 --decode > secrets.yaml
