--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -52,6 +52,7 @@ substitutions:
   dec_color_temperature_step: "10"
   inc_color_temperature_step: "10"
   dark_mode: "true"
+  keep_states_in_sync: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
