--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -54,6 +54,7 @@ substitutions:
   dec_color_temperature_step: "10"
   inc_color_temperature_step: "10"
   dark_mode: "true"
+  keep_states_in_sync: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
