--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,10 +19,11 @@ jobs:
         devices: [ 'tdisplayremote', 'fireremote', 'tdisplayt4', 'm5stickc' ]
     steps:
       - uses: actions/checkout@v2
-      - uses: RafikFarhad/clang-format-github-action@v2.1.0
+      - uses: DoozyX/clang-format-lint-action@v0.14
         with:
-          sources: "esphomeRemote/*.h"
-          style: "file:.clang-format"
+          source: 'esphomeRemote/*'
+          extensions: 'h,cpp'
+          clangFormatVersion: 14
       - name: Create file
         run: |
           echo "d2lmaV9ic3NpZDogIjFDOjg3OjJDOjcwOkMyOkMyIgp3aWZpX3NzaWQ6ICJzc2lkIgp3aWZpX3Bhc3N3b3JkOiAid2lmaXBhc3MiCndpZmlfZmFsbGJhY2tfcGFzc3dvcmQ6ICJ3aWZpZmFsbGJhY2twYXNzIgphcGlfZW5jcnlwdGlvbjogImFwaWVuY3J5cHRpb24iCm90YV9lbmNyeXB0aW9uOiAib3RhZW5jcnlwdGlvbiIK" | base64 --decode > secrets.yaml
