--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: DoozyX/clang-format-lint-action@v0.14
         with:
-          source: 'esphomeRemote/*'
+          source: 'esphomeRemote'
           extensions: 'h,cpp'
           clangFormatVersion: 14
       - name: Create file
