Added ability to control switches

--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -10,6 +10,7 @@ esphome:
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
+    - esphomeRemote/esphomeRemoteSwitch.h
     - esphomeRemote/esphomeRemoteSensor.h
     - esphomeRemote/DisplayUpdateInterface.h
     - esphomeRemote/esphomeRemote.h
