--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -8,6 +8,7 @@ esphome:
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
+    - esphomeRemote/esphomeRemoteSwitch.h
     - esphomeRemote/esphomeRemoteSensor.h
     - esphomeRemote/DisplayUpdateInterface.h
     - esphomeRemote/esphomeRemote.h
