changed swytch to switchObject.  Added sample.  Change file format to Unix (was dos)

--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -320,6 +320,17 @@ custom_component:
      return {lightGroup};
    id: light_group_component
 
+ ## Home assistant switches. Set with a friendly name
+ - lambda: |-
+     std::vector<FriendlyNameEntity> switches {
+       FriendlyNameEntity("switch.office_fan", "Office Fan"),
+       FriendlyNameEntity("switch.office_powerstrip", "Office Power Strip")
+     };
+     switchGroup = new SwitchGroupComponent(displayUpdate);
+     switchGroup->setup(switches);
+     return {switchGroup};
+   id: switch_group_component
+
  ## Home assistant sensors. Set with a friendly name
  - lambda: |-
      std::vector<FriendlyNameEntity> sensors {
