--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -14,6 +14,7 @@ esphome:
     - esphomeRemote/esphomeRemote.h
     - esphomeRemote/esphomeRemoteNowPlayingMenu.h
     - esphomeRemote/esphomeRemote3Button.h
+    - esphomeRemote/esphomeRemoteCommon.h
 
 esp32:
   board: esp32dev
