add light detail menu to be able to change brightness/color_temp for lights (#15)
* add light detail menu to be able to change brightness/color_temp for lights

* add light detail menu to be able to change brightness/color_temp for lights

* don't show menu if light doesn't support brightness

* fix duplicate case value

* make the light know if it supports brightness change

* change slider design

* move global vars for light detail to LightGroup class

* remove default case in selectRootMenu

* change slider design to two rows (title + slider)

* make increase/decrease increments adjustable for light brightness and color temperature

* refactor and cleanup light detail

* integrate light details into drawMenu \n

Note: scrolling more than three items (title + 2 sliders) doesnt work for now.

* change slider design to line (from bar)

* always show brightness/color_temp on slider when light is on

* change slider design, leave selection onPressSelect, make color_temp range based on mired range fo light

* remove sstream

https://github.com/landonr/esphome-remote/pull/15#discussion_r1006347727

* make and use enum for light type

https://github.com/landonr/esphome-remote/pull/15#discussion_r1006348356
https://github.com/landonr/esphome-remote/pull/15#discussion_r1006352989

* fix broken devices by refactoring color mode enum

* only update light attribute if last changed is confirmed by home assistant

* remove unused function drawMenuLightDetail

* use xPos (margin_size) instead of 0 for slider title x position

* fix indentation

* convert all class variables to camelCase format

* improve log readability

* make slider update behavior configurable

* fix no title in media players menu

* make slider circles white when not selected

* update display immediatly after deselecting light

* remove debug log flooding the log

* Revert "Merge branch 'main' of github.com:abroooo/esphome-remote into lightDe

--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -119,6 +119,12 @@ font:
     ]
     
 globals:
+## Width in pixels
+  - id: display_size_x
+    type: int
+    restore_value: no
+    initial_value: ${display_size_x}
+
 ## Size of the large font above
   - id: large_font_size
     type: int
@@ -154,6 +160,12 @@ globals:
     type: int
     restore_value: no
     initial_value: ${margin_size}
+    
+## Global slider_margin size
+  - id: slider_margin_size
+    type: int
+    restore_value: no
+    initial_value: ${slider_margin_size}
     
 ## Scrollbar total width
   - id: scroll_bar_width
@@ -245,11 +257,43 @@ globals:
     restore_value: no
     initial_value: ${sync_active_player}
 
+## brightness decrease step
+  - id: dec_brightness_step
+    type: int
+    restore_value: no
+    initial_value: ${dec_brightness_step}
+
+## brightness increase step
+  - id: inc_brightness_step
+    type: int
+    restore_value: no
+    initial_value: ${inc_brightness_step}
+
+## color temperature decrease step
+  - id: dec_color_temperature_step
+    type: int
+    restore_value: no
+    initial_value: ${dec_color_temperature_step}
+
+## color temperature increase step
+  - id: inc_color_temperature_step
+    type: int
+    restore_value: no
+    initial_value: ${inc_color_temperature_step}
+
 ## Black background
   - id: dark_mode
     type: bool
     restore_value: no
     initial_value: ${dark_mode}
+
+## true: slider will always be in sync with homeassistant (can be less smooth)
+## false: slider will show local brightness. Local brightness won't show changes
+## made outside of the remote. (should always give a smooth experience)
+  - id: keep_states_in_sync
+    type: bool
+    restore_value: no
+    initial_value: ${keep_states_in_sync}
       
 interval:
   - interval: 1s
