--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -17,6 +17,7 @@ esphome:
     - esphomeRemote/esphomeRemoteNowPlayingMenu.h
     - esphomeRemote/esphomeRemote3Button.h
     - esphomeRemote/esphomeRemoteFireLight.h
+    - esphomeRemote/esphomeRemoteCommon.h
 
 substitutions:
   boot_name: '"Fire Remote <3"'
@@ -24,6 +25,7 @@ substitutions:
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
+  display_size_x: "240"
   large_font_size: "24"
   medium_font_size: "20"
   small_font_size: "18"
@@ -31,6 +33,7 @@ substitutions:
   icon_size_large: "28"
   header_height: "24"
   margin_size: "8"
+  slider_margin_size: "6"
   scroll_bar_width: "8"
   bottom_bar_margin: "42"
   now_playing_max_lines: "5"
@@ -46,7 +49,12 @@ substitutions:
   sleep_after: "7200"
   menu_rollover_on: "false"
   sync_active_player: "true"
+  dec_brightness_step: "10"
+  inc_brightness_step: "10"
+  dec_color_temperature_step: "10"
+  inc_color_temperature_step: "10"
   dark_mode: "true"
+  keep_states_in_sync: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
