--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -14,6 +14,7 @@ esphome:
     - esphomeRemote/esphomeRemote.h
     - esphomeRemote/esphomeRemoteNowPlayingMenu.h
     - esphomeRemote/esphomeRemote2Button.h
+    - esphomeRemote/esphomeRemoteCommon.h
 
 esp32:
   board: m5stick-c
@@ -26,6 +27,7 @@ substitutions:
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
+  display_size_x: "240"
   large_font_size: "20"
   medium_font_size: "14"
   small_font_size: "12"
@@ -33,6 +35,7 @@ substitutions:
   icon_size_large: "19"
   header_height: "16"
   margin_size: "4"
+  slider_margin_size: "6"
   scroll_bar_width: "6"
   bottom_bar_margin: "32"
   now_playing_max_lines: "8"
@@ -48,7 +51,12 @@ substitutions:
   sleep_after: "7200"
   menu_rollover_on: "false"
   sync_active_player: "true"
+  dec_brightness_step: "10"
+  inc_brightness_step: "10"
+  dec_color_temperature_step: "10"
+  inc_color_temperature_step: "10"
   dark_mode: "true"
+  keep_states_in_sync: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
