--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -97,6 +97,8 @@ font:
       '󰓇', # mdi-spotify
       '󰔂', # mdi-television
       '󰋜', # mdi-home
+      '󰌵', # mdi-lightbulb
+      '󰌶', # mdi-lightbulb-outline
     ]  
   - file: 'fonts/materialdesignicons-webfont.ttf' 
     id: material_font_small
@@ -116,6 +118,8 @@ font:
       '󰓇', # mdi-spotify
       '󰔂', # mdi-television
       '󰋜', # mdi-home
+      '󰌵', # mdi-lightbulb
+      '󰌶', # mdi-lightbulb-outline
     ]
     
 globals:
@@ -369,8 +373,7 @@ custom_component:
  ## Home assistant switches. Set with a friendly name
  - lambda: |-
      std::vector<FriendlyNameEntity> switches {
-       FriendlyNameEntity("switch.office_fan", "Office Fan"),
-       FriendlyNameEntity("switch.office_powerstrip", "Office Power Strip")
+       FriendlyNameEntity("switch.kitchen_fan", "Kitchen Fan")
      };
      switchGroup = new SwitchGroupComponent(displayUpdate);
      switchGroup->setup(switches);
@@ -384,7 +387,8 @@ custom_component:
        FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
        FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
        FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture"),
-       FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air")
+       FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air"),
+       FriendlyNameEntity("sensor.oven_temp_temperature_probe_1", "Oven Temp")
      };
      sensorGroup = new SensorGroupComponent();
      sensorGroup->setup(sensors);
