--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -21,6 +21,7 @@ esphome:
 
 substitutions:
   boot_name: '"Fire Remote <3"'
+  boot_logo_size: "48"
   friendly_name: "M5Fire Remote"
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
@@ -190,7 +191,7 @@ display:
     led_pin: 32  ### see note below ###
     reset_pin: 33
     id: my_display
-    update_interval: 10s
+    update_interval: 40ms 
     lambda: |-
       manageLight();
       if (idleTime < 0) {
