--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -23,6 +23,7 @@ esp32:
 
 substitutions:
   boot_name: '"M5Stick Remote <3"'
+  boot_logo_size: "48"
   friendly_name: M5stickcRemote
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
@@ -203,7 +204,7 @@ display:
     col_start: 0
     row_start: 0
     eight_bit_color: true
-    update_interval: 5s    
+    update_interval: 40ms    
     lambda: |-
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
