--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -23,6 +23,7 @@ esp32:
 
 substitutions:
   boot_name: '"M5Stick Remote <3"'
+  boot_logo_size: "48"
   friendly_name: M5stickcRemote
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
@@ -191,7 +192,7 @@ display:
     dc_pin: GPIO23
     reset_pin: GPIO18
     rotation: 0
-    update_interval: 60s
+    update_interval: 40ms
     lambda: |-
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
