--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -204,7 +204,7 @@ display:
     col_start: 0
     row_start: 0
     eight_bit_color: true
-    update_interval: 40ms    
+    update_interval: 3600s    
     lambda: |-
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
