--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -192,7 +192,7 @@ display:
     dc_pin: GPIO23
     reset_pin: GPIO18
     rotation: 0
-    update_interval: 40ms
+    update_interval: 3600s
     lambda: |-
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
