--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -199,6 +199,7 @@ display:
         id(backlight).turn_on();
         idleTime = 0;
       }
+      ESP_LOGI("drawing menu", "hi");
       drawMenu();
       return;
       
